--- a/02 Аналитика рынка/Анализ конкурентов.md
+++ b/02 Аналитика рынка/Анализ конкурентов.md
@@ -4,18 +4,25 @@
 
 #### **1. Ключевые игроки рынка**  
 ##### **Премиум-сегмент (столы из эпоксидной смолы и дерева):**  
-- **Hardmassive (Москва):**  
+### **Hardmassive (Москва):**  
   - **Цены:** 110 000–800 000 руб. за столы из слэбов карагача, ореха, граба .  
   - **УТП:** Экологичные материалы, индивидуальный дизайн, гарантия на отсутствие пожелтения смолы.  
   - **Контент:** Сайт с фильтрами по параметрам (длина, порода дерева), акцент на технологиях заливки .  
   - **Соцсети:** Недостаточно данных, но сайт активно использует SEO под запросы "столы из эпоксидки".  
   - **Ссылка:** [Hardmassive](https://hardmassive.ru/magazin/folder/stoly-iz-epoksidnoy-smoly).  
 
-- **Velles (Москва):**  
+### **Velles (Москва):**  
   - **Цены:** Средний чек 80 000 руб., оборот 400 000 руб. за 1.5 месяца .  
   - **УТП:** Сотрудничество с дизайнерами, гарантия 36 месяцев, импортные материалы (древесина из Казахстана/Сибири, лаки из Италии).  
   - **Контент:** Квизы для расчета стоимости, таргет на запросы "стол массив на заказ Москва".  
-  - **Соцсети:** Успешные кампании в Яндекс.Директ (CTR 1.97%, 23 заявки за 46 тыс. руб. бюджета) .  
+  - **Соцсети:** Успешные кампании в Яндекс.Директ (CTR 1.97%, 23 заявки за 46 тыс. руб. бюджета).  
+
+### **Ирина Авито**
+- **Цена**: Средняя цена 45к
+- **УТП**: Как такое отсутвует 
+- **Контент**: хз
+- Соцсети: хз
+
 
 ##### **Масс-маркет (небольшие изделия):**  
 - **Gem-Resinart (Новосибирск):**  
