--- a/02 Аналитика рынка/Анализ поисковых запросов.md
+++ b/02 Аналитика рынка/Анализ поисковых запросов.md
@@ -6,4 +6,4 @@ excel-plugin: parsed
 
 
 # Excel
-[{"name":"sheet1","freeze":"A1","styles":[],"merges":[],"rows":{"0":{"cells":{"0":{"text":"Слово"},"1":{"text":"Колличесво запрсов за год"}}},"1":{"cells":{"0":{"text":"Эпоксидный стол купить и подобные"},"1":{"text":"5471"}}},"2":{"cells":{"0":{"text":"Часы из эпоксидки"},"1":{"text":"280"}}},"3":{"cells":{"0":{"text":"Стол эпоксидный"},"1":{"text":"43278"}}},"4":{"cells":{"0":{"text":"Витраж стекляный"},"1":{"text":"1200"}}},"5":{"cells":{"0":{"text":"Стол в скандинавском стиле"},"1":{"text":"350"}}},"len":100},"cols":{"0":{"width":258},"1":{"width":268},"len":26},"validations":[],"autofilter":{}}]
+[{"name":"sheet1","rows":{"0":{"cells":{"0":{"text":"Слово"},"1":{"text":"Колличесво запрсов за год"}}},"1":{"cells":{"0":{"text":"Эпоксидный стол купить и подобные"},"1":{"text":"5471"}}},"2":{"cells":{"0":{"text":"Часы из эпоксидки"},"1":{"text":"280"}}},"3":{"cells":{"0":{"text":"Стол эпоксидный"},"1":{"text":"43278"}}},"4":{"cells":{"0":{"text":"Витраж стекляный"},"1":{"text":"1200"}}},"5":{"cells":{"0":{"text":"Стол в скандинавском стиле"},"1":{"text":"350"}}},"len":100},"merges":[]}]
